config
/*-------------------------
Important Note
 1 [Import missing java 8 package.]
 2 [Check syntax error.]
 Or 
 Servers are busy try after some time 
-------------------------*/
Test.java.java:1: error: class, interface, or enum expected
draw = function() {
^
Test.java.java:5: error: class, interface, or enum expected
    textAlign(CENTER,CENTER);
    ^
Test.java.java:6: error: class, interface, or enum expected
    textSize(30);
    ^
Test.java.java:9: error: class, interface, or enum expected
    var milliseconds = millis();
    ^
Test.java.java:10: error: class, interface, or enum expected
    var seconds = milliseconds / 1000;
    ^
Test.java.java:12: error: class, interface, or enum expected
    fill(0, 0, 0);
    ^
Test.java.java:13: error: class, interface, or enum expected
    if(seconds < 3){
    ^
Test.java.java:15: error: class, interface, or enum expected
    }
    ^
Test.java.java:18: error: class, interface, or enum expected
    }
    ^
Test.java.java:20: error: class, interface, or enum expected
        textSize(1);
        ^
Test.java.java:21: error: class, interface, or enum expected
text('v 0.1.1 This is a dummy script. 12Tae12        12tae12all.webadr.com       ',12,12);
^
Test.java.java:21: error: unclosed character literal
text('v 0.1.1 This is a dummy script. 12Tae12        12tae12all.webadr.com       ',12,12);
     ^
Test.java.java:21: error: unclosed character literal
text('v 0.1.1 This is a dummy script. 12Tae12        12tae12all.webadr.com       ',12,12);
                                                                                 ^
Test.java.java:22: error: class, interface, or enum expected
var sec;
^
Test.java.java:24: error: class, interface, or enum expected
fill(6, 110, 8);
^
Test.java.java:25: error: class, interface, or enum expected
rect(56, 100, 302, 117);
^
Test.java.java:26: error: class, interface, or enum expected
fill(0, 0, 0);
^
Test.java.java:27: error: class, interface, or enum expected
textSize(50);
^
Test.java.java:28: error: class, interface, or enum expected
text('12Tae12',206,132);
^
Test.java.java:28: error: unclosed character literal
text('12Tae12',206,132);
     ^
Test.java.java:28: error: unclosed character literal
text('12Tae12',206,132);
             ^
Test.java.java:29: error: class, interface, or enum expected
textSize(25);
^
Test.java.java:30: error: class, interface, or enum expected
text('The online co', 200,172);
^
Test.java.java:30: error: unclosed character literal
text('The online co', 200,172);
     ^
Test.java.java:30: error: unclosed character literal
text('The online co', 200,172);
                   ^
Test.java.java:31: error: class, interface, or enum expected
textSize(20);
^
Test.java.java:32: error: class, interface, or enum expected
};
^
27 errors
